# hrobot-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  errata.md
.github/workflows/: publish.yml
src/: boot.rs  bytes.rs  client.rs  conversion.rs  error.rs  firewall.rs  ip.rs  keys.rs  lib.rs  order.rs  rdns.rs  reset.rs  robot.rs  server.rs  subnet.rs  time.rs  timezones.rs  urlencode.rs  vswitch.rs  wol.rs
src/api/: failover.rs  firewall.rs  ip.rs  keys.rs  mod.rs  rdns.rs  reset.rs  server.rs  subnet.rs  traffic.rs  vswitch.rs  wol.rs  wrapper.rs
src/api/boot/: cpanel.rs  linux.rs  mod.rs  models.rs  plesk.rs  rescue.rs  vnc.rs  windows.rs
src/api/firewall/: mod.rs  models.rs  serde.rs
src/api/keys/: mod.rs
src/api/ordering/: mod.rs  models.rs
src/api/server/: mod.rs  models.rs
src/api/storagebox/: mod.rs  models.rs
src/client/: hyper.rs  mod.rs
src/data/: firewall.rs  mod.rs  server.rs
src/models/: firewall.rs  mod.rs  urlencode.rs
tests/: aaa_setup.rs  boot.rs  cpanel.rs  firewall.rs  ip.rs  keys.rs  linux_rescue.rs  plesk.rs  purchasing.rs  rdns.rs  rename_server.rs  rescue.rs  reset.rs  server.rs  storagebox.rs  subnet.rs  traffic.rs  vnc.rs  vswitch.rs  windows.rs  wol.rs  zzz_teardown.rs
tests/common/: mod.rs
