[package]
name = "hrobot"
description = "Unofficial Hetzner Robot API client"
keywords = ["hetzner", "robot", "api", "client"]
repository = "https://github.com/MathiasPius/hrobot-rs"
version = "0.1.14"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
thiserror = "1"

ipnet = { version = "2.8.0", features = ["serde"] }
time = { version = "0.3.23", features = ["serde-human-readable", "macros", "parsing"] }
time-tz = { version = "1.0.3" }
bytesize = { version = "1.2.0", features = ["serde"] }
rust_decimal = { version = "1.30.0", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_html_form = "0.2.1"

base64 = "0.21.2"
urlencoding = "2"

hyper = { version = "0.14.27", features = ["http1", "client"] }
hyper-rustls = { version = "0.24.1" }

[dev-dependencies]
tracing-subscriber = "0.3.17"
tracing-test = { version = "0.2.4" }

tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
serial_test = "2"

[features]
# Enabled non-disruptive tests and mus be provided as a selected feature,
# if you want to test endpoints lik get/list, which do not have side-effects.
non-disruptive-tests = []
# Enables disruptive tests. These are tests which modify the current state
# of RUNNING servers storageboxes, firewalls, etc., and MAY leave them in an
# undesired state!
disruptive-tests = []
