[package]
name = "hrobot"
description = "Unofficial Hetzner Robot API client"
keywords = ["hetzner", "robot", "api", "client", "async"]
repository = "https://github.com/MathiasPius/hrobot-rs"
version = "6.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
thiserror = "2.0.11"

ipnet = { version = "2.8.0", features = ["serde"] }
time = { version = "0.3.23", features = [
    "serde-human-readable",
    "macros",
    "parsing",
] }
time-tz = { version = "2.0.0" }
bytesize = { version = "1.2.0", features = ["serde"] }
rust_decimal = { version = "1.30.0", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_html_form = "0.2.2"

base64 = "0.22.0"
urlencoding = "2"

hyper = { version = "1.2.0", features = ["http1", "client"] }
hyper-rustls = { version = "0.27.0", default-features = false, features = [
    "http1",
    "webpki-tokio",
    "ring",
] }
hyper-util = { version = "0.1.3", features = [
    "client",
    "client-legacy",
    "http1",
] }
http-body-util = "0.1.0"

[dev-dependencies]
rand = "0.9.0"
tracing-subscriber = "0.3.17"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }

tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
serial_test = { version = "3.0.0", features = ["file_locks"] }
